# Basecamp-Exercises

./: STATUS.html  WORKSHOP_LOG.md
.github/workflows/: auto-approve.yml  claude-code-review.yml  claude.yml  test.yml
day1/01_inventory-management/: CLAUDE.md
day1/02_developer-platform/: solution.py
day1/03_prompt-rescue/: rescue.py
day1/04_diagnosing-ai-problems/: diagnostic-report-T-4471.md
day2/01_evals/: eval_boutique.py
day2/04_agent-build-hackathon/: Dockerfile  analyze.py  docker-compose.yml  hackathon.py  pro_run.py  pyproject.toml  requirements.txt  rfp_response_sample.json  rfp_response_surprise.json
day2/04_agent-build-hackathon/pro/: __init__.py  abtest.py  agent.py  audit_db.py  budget.py  calibration.py  chunker.py  clarify.py  client.py  comparator.py  conflict.py  consistency.py  date_verify.py  diff.py  docx_io.py  email_composer.py  embeddings.py  evals.py  fallback.py  feedback.py  hyde.py  kb.py  load_test.py  observe.py  pdf_export.py  presentation.py  providers.py  regression.py  retrieval.py  retrieval_eval.py  retrieval_v2.py  review_queue.py  reviewer.py  runner.py  safety.py  slack.py  specialists.py  tenancy.py  verifier.py  viewer.py  (+2 more)
day2/04_agent-build-hackathon/pro/tests/: test_agent_upgrades.py  test_infra.py  test_pro.py  test_product.py  test_retrieval_v2.py
day2/04_agent-build-hackathon/runs/: ab_sample.html  ab_surprise.html  baseline_sample.json  baseline_surprise.json  keynote_sample.html  keynote_surprise.html  pro_helios_sample_rfp.json  pro_sample.html  pro_surprise.html  pro_surprise_rfp_(unseen).json
(+27 files in other folders)
