[project]
name = "pro-hackathon"
version = "1.0.0"
description = "Pro RFP-response agent: BM25 + dense retrieval, critique loop, citation verifier, Apple-grade outputs."
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40",
    "rank-bm25>=0.2",
    "sentence-transformers>=2.5",
    "numpy>=1.24",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-cov>=4.1"]
docs = ["python-docx>=1.1"]

[tool.pytest.ini_options]
testpaths = ["pro/tests"]
python_files = ["test_*.py"]
addopts = "-q --tb=short"

[tool.coverage.run]
branch = true
source = ["pro"]
omit = ["pro/tests/*", "pro/__pycache__/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
